# kanbanned

./: README.md  flake.nix  justfile  kanbanned.cabal  mkdocs.yml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
app/: Main.hs
docs/: index.md
nix/: project.nix
src/: Kanbanned.hs
src/Kanbanned/: App.hs  Config.hs  State.hs
src/Kanbanned/Agent/: Rest.hs  Types.hs  WebSocket.hs
src/Kanbanned/App/: Attrs.hs  Env.hs  Event.hs  Refresh.hs
src/Kanbanned/GitHub/: GraphQL.hs  Types.hs
src/Kanbanned/Terminal/: ANSI.hs  Input.hs  Raw.hs  Screen.hs
src/Kanbanned/UI/: Draw.hs  Kanban.hs  Layout.hs  Markdown.hs  StatusBar.hs  Terminal.hs
test/: Main.hs
test/Kanbanned/: SmokeSpec.hs
test/Kanbanned/GitHub/: TypesSpec.hs
test/Kanbanned/Terminal/: InputSpec.hs
