cabal-version:   3.4
name:            kanbanned
version:         0.1.0.0
synopsis:        Terminal kanban board for agent-daemon
description:
  A Haskell TUI application that provides a terminal-based kanban
  board interface for agent-daemon. Displays GitHub Projects v2
  boards (Backlog/WIP/Done) and manages agent sessions with
  embedded terminal views via libvterm.

license:         MIT
license-file:    LICENSE
author:          paolino
maintainer:      paolo.veronelli@gmail.com
homepage:        https://github.com/lambdasistemi/kanbanned
bug-reports:     https://github.com/lambdasistemi/kanbanned/issues
category:        Development, Terminal
build-type:      Simple
tested-with:     GHC ==9.8.4
extra-doc-files: README.md

source-repository head
  type:     git
  location: https://github.com/lambdasistemi/kanbanned

flag werror
  description: Enable -Werror
  manual:      True
  default:     False

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wmissing-export-lists
    -Wname-shadowing -Wredundant-constraints

  if flag(werror)
    ghc-options: -Werror

library
  import:             warnings
  exposed-modules:
    Kanbanned
    Kanbanned.Agent.Rest
    Kanbanned.Agent.Types
    Kanbanned.Agent.WebSocket
    Kanbanned.App
    Kanbanned.Config
    Kanbanned.GitHub.GraphQL
    Kanbanned.GitHub.Types
    Kanbanned.State
    Kanbanned.Terminal.ANSI
    Kanbanned.Terminal.Input
    Kanbanned.Terminal.Raw
    Kanbanned.Terminal.Screen
    Kanbanned.UI.Kanban
    Kanbanned.UI.Layout
    Kanbanned.UI.StatusBar
    Kanbanned.UI.Terminal

  hs-source-dirs:     src
  default-language:   GHC2021
  build-depends:
    , aeson             >=2.1  && <2.3
    , async             >=2.2  && <2.3
    , base              >=4.18 && <5
    , bytestring        >=0.11 && <0.13
    , containers        >=0.6  && <0.8
    , directory         >=1.3  && <1.4
    , filepath          >=1.4  && <1.6
    , http-client       >=0.7  && <0.8
    , http-client-tls   >=0.3  && <0.4
    , http-types        >=0.12 && <0.13
    , libvterm-haskell  >=0.1  && <0.2
    , stm               >=2.5  && <2.6
    , text              >=2.0  && <2.2
    , unix              >=2.7  && <2.9
    , websockets        >=0.12 && <0.14

  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    StrictData

executable kanbanned
  import:             warnings
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   GHC2021
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base                  >=4.18 && <5
    , kanbanned
    , optparse-applicative  >=0.17 && <0.19

  default-extensions:
    ImportQualifiedPost
    OverloadedStrings

test-suite unit-tests
  import:             warnings
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
    Kanbanned.GitHub.TypesSpec
    Kanbanned.Terminal.InputSpec

  hs-source-dirs:     test
  default-language:   GHC2021
  build-depends:
    , aeson      >=2.1  && <2.3
    , base       >=4.18 && <5
    , hspec      >=2.11 && <2.12
    , kanbanned

  default-extensions: OverloadedStrings
  build-tool-depends: hspec-discover:hspec-discover
